--- a/Particles/nbproject/project.properties
+++ b/Particles/nbproject/project.properties
@@ -69,7 +69,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=org.tiralab.particles.App
+main.class=org.tiralab.particles.main.App
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
